Some fonts installed in user directory are not detected on Windows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 22
    • Affects Version/s: 17, 20, 21
    • Component/s: client-libs
    • None
    • b05
    • windows

      Actual issue is that fonts with long enough absolute path are ignored by JDK, that's why it mainly affects fonts in user directory.
      It's caused by incorrect limit for maximum path length when reading fonts from registry.

            Assignee:
            Nikita Gubarkov
            Reporter:
            Nikita Gubarkov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: