8305667: Some fonts installed in user directory are not detected on Windows